fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html,body{
 }
 #meeting{
     display: none;
+    overflow: hidden;
 }
 #navbar{
     height: 60px;
